@@ -1,0 +1,6 @@
+Contains many functions useful for data analysis, high-level graphics,
+utility operations, functions for computing sample size and power,
+importing and annotating datasets, imputing missing values, advanced
+table making, variable clustering, character string manipulation,
+conversion of R objects to LaTeX and html code, and recoding
+variables.
